sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:6: error: reassignment to val
    ecart = (ecart.toDouble / 1.3).toInt
          ^